--- a/src/scss/sections/cards.scss
+++ b/src/scss/sections/cards.scss
@@ -35,15 +35,15 @@
   transform: translateY(100px);
 
   &:first-child {
-    transition: transform 1s ease .3s, opacity 0.7s ease .3s;
+    transition: transform 1s ease .3s, opacity 0.3s ease-in-out .3s;
   }
 
   &:nth-child(2) {
-    transition: transform 1s ease .5s, opacity 0.7s ease .5s;
+    transition: transform 1s ease .5s, opacity 0.3s ease-in-out .5s;
   }
 
   &:last-child {
-    transition: transform 1s ease 1s, opacity 0.7s ease 1s;
+    transition: transform 1s ease 1s, opacity 0.3s ease-in-out 1s;
   }
 
 
