--- a/src/scss/sections.scss
+++ b/src/scss/sections.scss
@@ -1,3 +1,7 @@
 @import 'sections/main-block';
 @import 'sections/cards';
 @import 'sections/csit';
+@import 'sections/mission';
+@import 'sections/faq';
+@import 'sections/what';
+@import 'sections/data';
