--- a/src/scss/sections.scss
+++ b/src/scss/sections.scss
@@ -5,3 +5,8 @@
 @import 'sections/faq';
 @import 'sections/what';
 @import 'sections/data';
+@import 'sections/operation';
+@import 'sections/transis';
+@import 'sections/status';
+@import 'sections/st';
+@import 'sections/map';
