--- a/src/scss/sections/main-block.scss
+++ b/src/scss/sections/main-block.scss
@@ -31,6 +31,7 @@
   &__container {
     position: relative;
     z-index: 2;
+    width: 100%;
     height: 100%;
   }
 
@@ -44,6 +45,7 @@
   }
 
   &__title {
+    word-break: break-word;
     max-width: 1006px;
     font-weight: 700;
     line-height: math.div(96, 78);
@@ -69,6 +71,12 @@
     transition: opacity 1s ease .8s;
     opacity: 0;
     transform: translateY(40px);
+
+    & > * {
+      &:not(:last-child) {
+        margin-bottom: 1em;
+      }
+    }
 
     &._watcher-view {
       opacity: 1;
@@ -152,3 +160,96 @@
 
 }
 
+.main-block--contact {
+  padding-bottom: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+
+  .main-block__content {
+    padding-top: 150px;
+    @media (max-width: $tablet) {
+      padding-top: 100px;
+    }
+  }
+}
+
+.contact {
+  background: rgba(15, 20, 26, 0.8);
+  position: relative;
+  z-index: 2;
+  flex: 1 1 auto;
+  width: 100%;
+  padding: 60px 0 190px;
+  color: var(--white);
+  margin-top: 100px;
+  @media (max-width: $pc) {
+    padding: 40px 0 140px;
+  }
+  @media (max-width: $tablet) {
+    padding: 40px 0 10px;
+    margin-top: 50px;
+  }
+
+  &__row {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    @media (max-width: $tablet) {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+
+  &__column {
+    padding: 30px 80px;
+    @media (max-width: $pc) {
+      padding: 30px;
+    }
+    @media (max-width: $tablet) {
+      padding: 30px 0;
+    }
+
+    &:not(:last-child) {
+      border-right: 1px solid #FFFFFF;
+      @media (max-width: $tablet) {
+        border-right: none;
+        border-bottom: 1px solid #FFFFFF;
+      }
+    }
+
+    &:first-child {
+      padding-left: 0;
+    }
+  }
+
+  &__text {
+    font-size: 20px;
+    line-height: math.div(24, 20);
+
+    &:not(:last-child) {
+      margin-bottom: 16px;
+    }
+  }
+
+  &__link {
+    font-size: 40px;
+    font-weight: 700;
+    transition: all 0.3s cubic-bezier(0.5, 0.02, 0.13, 0.5);
+    line-height: math.div(52, 40);
+    color: var(--light-green);
+    @media (max-width: $tablet) {
+      font-size: 32px;
+    }
+
+    &:hover {
+      color: var(--green);
+    }
+
+
+  }
+
+  &__country {
+    font-size: 20px;
+    line-height: math.div(24, 20);
+  }
+}
