--- a/src/scss/sections/mission.scss
+++ b/src/scss/sections/mission.scss
@@ -5,6 +5,7 @@
   @media (max-width: $mobile) {
     padding-top: 28px;
     padding-bottom: 50px;
+    overflow: hidden;
   }
 
   &__container {
@@ -24,6 +25,50 @@
   &--mob-white {
     @media (max-width: $tablet) {
       background: #fff;
+    }
+  }
+
+  &.pt186 {
+    padding-top: 186px;
+    @media (max-width: $tablet) {
+      padding-top: 100px;
+    }
+    @media (max-width: $mobile) {
+      padding-top: 28px;
+    }
+  }
+
+  &.mt-100 {
+    margin-top: -120px;
+    padding-top: 0;
+    @media (max-width: $tablet) {
+      margin-top: 0;
+      padding-top: 60px;
+    }
+
+    .mission__image-ibg {
+      margin-left: 10px;
+      @media (max-width: $mobile) {
+        margin-left: 0;
+      }
+    }
+
+    .mission__content {
+      padding-top: 330px;
+      @media (max-width: $pc) {
+        padding-top: 200px;
+      }
+      @media (max-width: $tablet) {
+        padding-top: 0;
+      }
+
+    }
+  }
+
+  &--train {
+    padding-top: 360px;
+    @media (max-width: $mobile) {
+      padding-top: 100px;
     }
   }
 
@@ -77,6 +122,9 @@
     line-height: math.div(52, 48);
     @media (max-width: $mobile) {
       font-size: 38px;
+      br {
+        display: none;
+      }
     }
 
     &:not(:last-child) {
